--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "lodash": "^4.17.20",
+    "nodemon": "^2.0.7",
     "validator": "^10.8.0",
     "yargs": "^16.2.0"
   }
